--- a/ACBuildConfig.xcconfig
+++ b/ACBuildConfig.xcconfig
@@ -1,5 +1,14 @@
+//
 //  ACBuildConfig.xcconfig
+//
+//  Optimized for Xcode 7.3.1
+//
 //  Version 0.0
+//
 
+// Build Options
 ENABLE_BITCODE = NO
+
+// Apple LLVM 7.1 - Warning Policies
+GCC_WARN_PEDANTIC = YES
 
