Added warnings for Objective C.

--- a/ACBuildConfig.xcconfig
+++ b/ACBuildConfig.xcconfig
@@ -45,3 +45,13 @@ GCC_WARN_UNUSED_LABEL = YES
 GCC_WARN_UNUSED_VALUE = YES
 GCC_WARN_UNUSED_VARIABLE = YES
 
+// Apple LLVM 7.1 - Warnings - Objective C
+CLANG_WARN_DIRECT_OBJC_ISA_USAGE = YES_ERROR
+CLANG_WARN__DUPLICATE_METHOD_MATCH = YES
+CLANG_WARN_OBJC_IMPLICIT_ATOMIC_PROPERTIES = YES
+GCC_WARN_ALLOW_INCOMPLETE_PROTOCOL = YES
+CLANG_WARN_DEPRECATED_OBJC_IMPLEMENTATIONS = YES
+GCC_WARN_STRICT_SELECTOR_MATCH = YES
+GCC_WARN_UNDECLARED_SELECTOR = YES
+CLANG_WARN_OBJC_ROOT_CLASS = YES_ERROR
+
