--- a/ACBuildConfig.xcconfig
+++ b/ACBuildConfig.xcconfig
@@ -60,3 +60,6 @@ CLANG_WARN_OBJC_IMPLICIT_RETAIN_SELF = YES
 CLANG_WARN_OBJC_REPEATED_USE_OF_WEAK = YES
 CLANG_WARN__ARC_BRIDGE_CAST_NONARC = YES
 
+// Asset Catalog Compiler - Options
+ASSETCATALOG_WARNINGS = YES
+
