--- a/ACBuildConfig.xcconfig
+++ b/ACBuildConfig.xcconfig
@@ -63,3 +63,10 @@ CLANG_WARN__ARC_BRIDGE_CAST_NONARC = YES
 // Asset Catalog Compiler - Options
 ASSETCATALOG_WARNINGS = YES
 
+// Static Analyzer - Generic Issues
+CLANG_ANALYZER_DEADCODE_DEADSTORES = YES
+CLANG_ANALYZER_MEMORY_MANAGEMENT = YES
+CLANG_ANALYZER_LOCALIZABILITY_NONLOCALIZED = YES
+CLANG_ANALYZER_NONNULL = YES
+CLANG_ANALYZER_GCD = YES
+
