Added settings for Static Analyzer - Issues - Security.

--- a/ACBuildConfig.xcconfig
+++ b/ACBuildConfig.xcconfig
@@ -80,3 +80,12 @@ CLANG_ANALYZER_OBJC_UNUSED_IVARS = YES
 CLANG_ANALYZER_OBJC_SELF_INIT = YES
 CLANG_ANALYZER_OBJC_RETAIN_COUNT = YES
 
+// Static Analyzer - Issues - Security
+CLANG_ANALYZER_SECURITY_FLOATLOOPCOUNTER = YES
+CLANG_ANALYZER_SECURITY_KEYCHAIN_API = YES
+CLANG_ANALYZER_SECURITY_INSECUREAPI_UNCHECKEDRETURN = YES
+CLANG_ANALYZER_SECURITY_INSECUREAPI_GETPW_GETS = YES
+CLANG_ANALYZER_SECURITY_INSECUREAPI_MKSTEMP = YES
+CLANG_ANALYZER_SECURITY_INSECUREAPI_RAND = YES
+CLANG_ANALYZER_SECURITY_INSECUREAPI_STRCPY = YES
+CLANG_ANALYZER_SECURITY_INSECUREAPI_VFORK = YES
