Added settings for Swift Compiler - Code Generation.

--- a/ACBuildConfig.xcconfig
+++ b/ACBuildConfig.xcconfig
@@ -88,3 +88,6 @@ CLANG_ANALYZER_SECURITY_INSECUREAPI_MKSTEMP = YES
 CLANG_ANALYZER_SECURITY_INSECUREAPI_RAND = YES
 CLANG_ANALYZER_SECURITY_INSECUREAPI_STRCPY = YES
 CLANG_ANALYZER_SECURITY_INSECUREAPI_VFORK = YES
+
+// Swift Compiler - Code Generation
+SWIFT_DISABLE_SAFETY_CHECKS = NO
