Updated for Xcode 8.3.3

--- a/ACBuildConfig.xcconfig
+++ b/ACBuildConfig.xcconfig
@@ -1,7 +1,7 @@
 //
 //  ACBuildConfig.xcconfig
 //
-//  Optimized for Xcode 7.3.1
+//  Optimized for Xcode 8.3.3
 //
 //  Version 0.1.1
 //
@@ -9,10 +9,10 @@
 // Build Options
 ENABLE_BITCODE = NO
 
-// Apple LLVM 7.1 - Warning Policies
+// Apple LLVM 8.1 - Warning Policies
 GCC_WARN_PEDANTIC = YES
 
-// Apple LLVM 7.1 - Warnings - All languages
+// Apple LLVM 8.1 - Warnings - All languages
 GCC_WARN_CHECK_SWITCH_STATEMENTS = YES
 GCC_WARN_ABOUT_DEPRECATED_FUNCTIONS = YES
 CLANG_WARN_EMPTY_BODY = YES
@@ -23,7 +23,7 @@ GCC_WARN_64_TO_32_BIT_CONVERSION = YES
 GCC_WARN_64_TO_32_BIT_CONVERSION[arch=*64] = YES
 CLANG_WARN_ENUM_CONVERSION = YES
 CLANG_WARN_INT_CONVERSION = YES
-CLANG_WARN_NULLABLE_TO_NONNULL_CONVERSION = YES
+CLANG_WARN_INFINITE_RECURSION = YES
 GCC_WARN_INITIALIZER_NOT_FULLY_BRACKETED = YES
 GCC_WARN_ABOUT_RETURN_TYPE = YES_ERROR
 GCC_WARN_MISSING_PARENTHESES = YES
@@ -45,7 +45,7 @@ GCC_WARN_UNUSED_LABEL = YES
 GCC_WARN_UNUSED_VALUE = YES
 GCC_WARN_UNUSED_VARIABLE = YES
 
-// Apple LLVM 7.1 - Warnings - Objective C
+// Apple LLVM 8.1 - Warnings - Objective C
 CLANG_WARN_DIRECT_OBJC_ISA_USAGE = YES_ERROR
 CLANG_WARN__DUPLICATE_METHOD_MATCH = YES
 CLANG_WARN_OBJC_IMPLICIT_ATOMIC_PROPERTIES = YES
@@ -55,12 +55,13 @@ GCC_WARN_STRICT_SELECTOR_MATCH = YES
 GCC_WARN_UNDECLARED_SELECTOR = YES
 CLANG_WARN_OBJC_ROOT_CLASS = YES_ERROR
 
-// Apple LLVM 7.1 - Warnings - Objective C and ARC
+// Apple LLVM 8.1 - Warnings - Objective C and ARC
 CLANG_WARN_OBJC_IMPLICIT_RETAIN_SELF = YES
 CLANG_WARN_OBJC_REPEATED_USE_OF_WEAK = YES
 CLANG_WARN__ARC_BRIDGE_CAST_NONARC = YES
 
 // Asset Catalog Compiler - Options
+ASSETCATALOG_NOTICES = YES
 ASSETCATALOG_WARNINGS = YES
 
 // Static Analyzer - Generic Issues
@@ -71,6 +72,7 @@ CLANG_ANALYZER_GCD = YES
 
 // Static Analyzer - Issues - Objective C
 CLANG_ANALYZER_OBJC_ATSYNC = YES
+CLANG_ANALYZER_OBJC_DEALLOC = YES
 CLANG_ANALYZER_OBJC_NSCFERROR = YES
 CLANG_ANALYZER_OBJC_INCOMP_METHOD_TYPES = YES
 CLANG_ANALYZER_OBJC_COLLECTIONS = YES
