--- a/ACBuildConfig.xcconfig
+++ b/ACBuildConfig.xcconfig
@@ -67,15 +67,17 @@ ASSETCATALOG_WARNINGS = YES
 // Static Analyzer - Generic Issues
 CLANG_ANALYZER_DEADCODE_DEADSTORES = YES
 CLANG_ANALYZER_MEMORY_MANAGEMENT = YES
+
+// Static Analyzer - Issues - Apple APIs
+CLANG_ANALYZER_OBJC_NSCFERROR = YES
 CLANG_ANALYZER_LOCALIZABILITY_NONLOCALIZED = YES
+CLANG_ANALYZER_OBJC_COLLECTIONS = YES
 CLANG_ANALYZER_GCD = YES
 
 // Static Analyzer - Issues - Objective C
 CLANG_ANALYZER_OBJC_ATSYNC = YES
 CLANG_ANALYZER_OBJC_DEALLOC = YES
-CLANG_ANALYZER_OBJC_NSCFERROR = YES
 CLANG_ANALYZER_OBJC_INCOMP_METHOD_TYPES = YES
-CLANG_ANALYZER_OBJC_COLLECTIONS = YES
 CLANG_ANALYZER_OBJC_GENERICS = YES
 CLANG_ANALYZER_OBJC_UNUSED_IVARS = YES
 CLANG_ANALYZER_OBJC_SELF_INIT = YES
