--- a/ACBuildConfig.xcconfig
+++ b/ACBuildConfig.xcconfig
@@ -67,12 +67,14 @@ ASSETCATALOG_WARNINGS = YES
 // Static Analyzer - Generic Issues
 CLANG_ANALYZER_DEADCODE_DEADSTORES = YES
 CLANG_ANALYZER_MEMORY_MANAGEMENT = YES
+CLANG_ANALYZER_NONNULL = YES
 
 // Static Analyzer - Issues - Apple APIs
 CLANG_ANALYZER_OBJC_NSCFERROR = YES
 CLANG_ANALYZER_LOCALIZABILITY_NONLOCALIZED = YES
 CLANG_ANALYZER_OBJC_COLLECTIONS = YES
 CLANG_ANALYZER_GCD = YES
+CLANG_ANALYZER_NUMBER_OBJECT_CONVERSION= YES
 
 // Static Analyzer - Issues - Objective C
 CLANG_ANALYZER_OBJC_ATSYNC = YES
