Added new warnings for Xcode 9.0.1

--- a/ACBuildConfig.xcconfig
+++ b/ACBuildConfig.xcconfig
@@ -6,13 +6,14 @@
 //  Version 0.3.0
 //
 
-// Build Options
+// Build Options (iOS only)
 ENABLE_BITCODE = NO
 
 // Apple LLVM 8.1 - Warning Policies
 GCC_WARN_PEDANTIC = YES
 
 // Apple LLVM 8.1 - Warnings - All languages
+CLANG_WARN_BLOCK_CAPTURE_AUTORELEASING = YES
 GCC_WARN_CHECK_SWITCH_STATEMENTS = YES
 GCC_WARN_ABOUT_DEPRECATED_FUNCTIONS = YES
 CLANG_WARN_EMPTY_BODY = YES
@@ -33,10 +34,13 @@ GCC_WARN_ABOUT_MISSING_NEWLINE = YES
 CLANG_WARN_ASSIGN_ENUM = YES
 GCC_WARN_ABOUT_POINTER_SIGNEDNESS = YES
 GCC_WARN_SIGN_COMPARE = YES
+CLANG_WARN_STRICT_PROTOTYPES = YES
+CLANG_WARN_COMMA = YES
 CLANG_WARN_SUSPICIOUS_IMPLICIT_CONVERSION = YES
 GCC_TREAT_INCOMPATIBLE_POINTER_TYPE_WARNINGS_AS_ERRORS = YES
 GCC_TREAT_IMPLICIT_FUNCTION_DECLARATIONS_AS_ERRORS = YES
 GCC_WARN_TYPECHECK_CALLS_TO_PRINTF = YES
+CLANG_WARN_UNGUARDED_AVAILABILITY = YES_AGGRESSIVE
 GCC_WARN_UNINITIALIZED_AUTOS = YES_AGGRESSIVE
 GCC_WARN_UNKNOWN_PRAGMAS = YES
 CLANG_WARN_UNREACHABLE_CODE = YES
@@ -49,6 +53,7 @@ GCC_WARN_UNUSED_VARIABLE = YES
 CLANG_WARN_DIRECT_OBJC_ISA_USAGE = YES_ERROR
 CLANG_WARN__DUPLICATE_METHOD_MATCH = YES
 CLANG_WARN_OBJC_IMPLICIT_ATOMIC_PROPERTIES = YES
+CLANG_WARN_OBJC_LITERAL_CONVERSION = YES
 GCC_WARN_ALLOW_INCOMPLETE_PROTOCOL = YES
 CLANG_WARN_DEPRECATED_OBJC_IMPLEMENTATIONS = YES
 GCC_WARN_STRICT_SELECTOR_MATCH = YES
@@ -74,7 +79,7 @@ CLANG_ANALYZER_OBJC_NSCFERROR = YES
 CLANG_ANALYZER_LOCALIZABILITY_NONLOCALIZED = YES
 CLANG_ANALYZER_OBJC_COLLECTIONS = YES
 CLANG_ANALYZER_GCD = YES
-CLANG_ANALYZER_NUMBER_OBJECT_CONVERSION= YES
+CLANG_ANALYZER_NUMBER_OBJECT_CONVERSION= YES_AGGRESSIVE
 
 // Static Analyzer - Issues - Objective C
 CLANG_ANALYZER_OBJC_ATSYNC = YES
