Added additional warning for Implicit Non-Literal Null Conversions.

--- a/ACBuildConfig.xcconfig
+++ b/ACBuildConfig.xcconfig
@@ -24,6 +24,7 @@ GCC_WARN_64_TO_32_BIT_CONVERSION = YES
 GCC_WARN_64_TO_32_BIT_CONVERSION[arch=*64] = YES
 CLANG_WARN_ENUM_CONVERSION = YES
 CLANG_WARN_INT_CONVERSION = YES
+CLANG_WARN_NON_LITERAL_NULL_CONVERSION = YES
 CLANG_WARN_INFINITE_RECURSION = YES
 GCC_WARN_INITIALIZER_NOT_FULLY_BRACKETED = YES
 GCC_WARN_ABOUT_RETURN_TYPE = YES_ERROR
